<resources>
    <string name="app_name">First.degree</string>
    <string name="Title_app">First degree</string>
    <string name="Title_coefficient_a">Coefficient a</string>
    <string name="Title_coefficient_b">Coefficient b</string>
    <string name="Title_solution">Solution</string>
    <string name="Title_next">Next</string>
    <string name="Title_result">Result</string>
    <string name="Title_exits">Exit</string>
    <string name="Title_infinity">Infinity</string>
    <string name="Title_nosolution">No solution</string>
    <string name="title_txtr">Result</string>
    <string name="Title_changelang">Change Language</string>
    <string name="Title_changlange">Change Language</string>
</resources>